--- a/templates/clients.html
+++ b/templates/clients.html
@@ -7,7 +7,7 @@
       <form action="" method="post" data-bind="submit: addClient">
         <div class="form-group">
                   <label for="name">Add Client</label>
-                  <input type="text" class="form-control" id="name" name="name" placeholder="Name" data-bind="value: newClient">
+                  <input type="text" class="form-control" id="name" name="name" required placeholder="Name" data-bind="value: newClient">
         </div>
         <button type="submit" class="btn btn-default">Add Client</button>
       </form>
@@ -15,33 +15,45 @@
     <div class="panel">
       <!-- ko foreach: clients, visible: clients().length > 0 -->
         <div class="panel-body">
-            <a data-bind="click: $parent.showFeatures" class="list-group-item">
+            <a href="#" class="list-group-item">
               <input type="text" class="list-group-item-heading" data-bind="visible: isEdit, value: clientName" />
               <h4 class="list-group-item-heading" data-bind="visible: isView, text: clientName"></h4></a>
 
             <a class="btn btn-danger" href="#" role="button" data-bind="visible: isView, click: $parent.deleteClient">Delete Client</a>
             <a class="btn btn-warning" href="#" role="button" data-bind="visible: isView, click: $parent.editable">Edit Client</a>
-            <a class="btn btn-warning" href="#" role="button" data-bind="visible: isEdit, click: $parent.editClient">Save</a>
+            <a class="btn btn-info" href="#" role="button" data-bind="visible: isView() && !isFeature(), click: $parent.showFeatures">Show Features</a>
+            <a class="btn btn-default" href="#" role="button" data-bind="visible: isView() && isFeature(), click: $parent.showFeatures">Hide Features</a>
+            <a class="btn btn-info" href="#" role="button" data-bind="visible: isEdit, click: $parent.editClient">Save</a>
+            <a class="btn btn-warning" href="#" role="button" data-bind="visible: isEdit, click: $parent.editable">Cancel</a>
         </div>
-        <div data-bind="visible: isFeature">
+        <div data-bind="visible: isFeature() && features().length > 0">
         <h3>Features</h3>
 
           <div class="panel-body row">
               <!-- ko foreach: features -->
               <div class="col-lg-8">
                 <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading" data-bind="text: title"></h4>
-                    <h4 class="list-group-item-heading" data-bind="text: product"></h4>
-                    <h4 class="list-group-item-heading" data-bind="text: priority"></h4>
-                    <p class="list-group-item-text" data-bind="text: description"></p>
+                    title: <h4 class="list-group-item-heading" data-bind="text: title"></h4>
+                    product: <h4 class="list-group-item-heading" data-bind="text: product"></h4>
+                    Priority: <h4 class="list-group-item-heading" data-bind="text: priority"></h4>
+                    description: <p class="list-group-item-text" data-bind="text: description"></p>
+                    Target date: <h4 class="list-group-item-heading" data-bind="text: targetDate"></h4>
+                    status: <p class="text-danger" data-bind="visible: !isDone">Not Implemented</p>
+                    <p class="text-success" data-bind="visible: isDone">Complete</p>
                 </a>
               </div>
               <div class="col-sm-3">
               <a class="btn btn-warning" data-bind="attr: { href: '/feature' + '/' + id }" role="button">Edit Feature</a>
               <a class="btn btn-danger" data-bind="attr: { href: '/feature/delete' + '/' + id }" role="button">Delete Feature</a>
+              <a class="btn btn-success" data-bind="visible: !isDone, click: $root.markStatus" role="button">Mark Complete</a>
+              <a class="btn btn-success" data-bind="visible: isDone, click: $root.markStatus" role="button">Mark Incomplete</a>
               </div>
               <!-- /ko -->
           </div>
+        </div>
+        <div data-bind="visible: isFeature() && features().length == 0">
+          No Features to show.
+          <a class="btn btn-primary" data-bind="attr: { href: '/featureRequest' }" role="button">Add Feature</a>
         </div>
         <!-- /ko -->
   </div>
@@ -51,7 +63,7 @@
       function Client(data) {
           this.id = ko.observable(data.id)
           this.clientName = ko.observable(data.clientName);
-          this.features = ko.observable(data.features);
+          this.features = ko.observableArray(data.features);
           this.isView = ko.observable(true);
           this.isEdit = ko.observable(data.isEdit);
           this.isFeature = ko.observable(data.isFeature);
@@ -110,6 +122,22 @@
           });
         };
 
+        self.markStatus = function(feature){
+          self.saveArray.removeAll();
+          if(feature.isDone){
+            feature.isDone = false;
+          }else{
+            feature.isDone = true;
+          }
+          self.saveArray.push(feature);
+
+          self.ajax('/api/v1/feature/save','POST', ko.toJSON({ list : self.saveArray })).done(function(Data) {
+            self.getAll();
+            alert("status Changed");
+          });
+        };
+
+
         self.getAll = function(){
           self.ajax('/api/v1/clients', 'GET').done(function(allData) {
           var allClients = $.map(allData.json, function(item) { return new Client(item) });
@@ -118,8 +146,13 @@
       };
 
         self.editable = function(client){
+            if(client.isView()){
             client.isEdit(true);
             client.isView(false);
+          }else{
+            client.isEdit(false);
+            client.isView(true);
+          }
         };
 
         self.showFeatures = function(client){
