--- a/templates/dependencies.html
+++ b/templates/dependencies.html
@@ -1,6 +1,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/form-style.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='js/datepicker/css/datepicker.css') }}" />
+
 <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/datepicker/js/bootstrap-datepicker.js') }}"></script>
