--- a/templates/products.html
+++ b/templates/products.html
@@ -8,13 +8,13 @@
   <form action="" method="post" data-bind="submit: addProduct">
     <div class="form-group">
               <label for="name">Add Product</label>
-              <input type="text" class="form-control" id="name" name="name" placeholder="Name" data-bind="value: newProduct">
+              <input type="text" class="form-control" id="name" name="name" placeholder="Name" data-bind="value: newProduct" required>
     </div>
     <button type="submit" class="btn btn-default">Add Product</button>
   </form>
 </div>
 <div class="panel">
-  <!-- ko foreach: products, visible: products().length > 0 -->
+  <!-- ko foreach: products -->
     <div class="panel-body">
         <a href="#" class="list-group-item">
           <input type="text" class="list-group-item-heading" data-bind="visible: isEdit, value: productArea" />
