--- a/templates/show_feature.html
+++ b/templates/show_feature.html
@@ -26,6 +26,9 @@
             <span id="priorityHelp" class="help-block">This will define the priority or order of feature execution.</span>
         </div>
         <div class="form-group">
+          Target Date:<input type="date" required name="targetDate" id="targetDate" class="form-control" placeholder="Target Date" value="{{feature.target_date}}">
+        </div>
+        <div class="form-group">
           <div class="row">
             <div class="col-md-3">
               <div class="input-group">
@@ -70,4 +73,6 @@
       </form>
 </div>
   <hr>
+{% endblock %}
+{% block scriptContent %}
 {% endblock %}
