changed app name

--- a/templates/clients.html
+++ b/templates/clients.html
@@ -43,10 +43,10 @@
                 </a>
               </div>
               <div class="col-sm-3">
-              <a class="btn btn-warning" data-bind="attr: { href: '/feature' + '/' + id }" role="button">Edit Feature</a>
-              <a class="btn btn-danger" data-bind="attr: { href: '/feature/delete' + '/' + id }" role="button">Delete Feature</a>
-              <a class="btn btn-success" data-bind="visible: !isDone, click: $root.markStatus" role="button">Mark Complete</a>
-              <a class="btn btn-success" data-bind="visible: isDone, click: $root.markStatus" role="button">Mark Incomplete</a>
+              <a class="btn btn-sm btn-warning" data-bind="attr: { href: '/feature' + '/' + id }" role="button">Edit Feature</a>
+              <a class="btn btn-sm btn-danger" data-bind="attr: { href: '/feature/delete' + '/' + id }" role="button">Delete Feature</a>
+              <a class="btn btn-sm btn-success" data-bind="visible: !isDone, click: $root.markStatus" role="button">Mark Complete</a>
+              <a class="btn btn-sm btn-success" data-bind="visible: isDone, click: $root.markStatus" role="button">Mark Incomplete</a>
               </div>
               <!-- /ko -->
           </div>
