--- a/project/templates/products.html
+++ b/project/templates/products.html
@@ -96,7 +96,7 @@
       self.products(allProducts);
     });
   };
-    self.editable = function(client){
+    self.editable = function(product){
         if(product.isView()){
         product.isEdit(true);
         product.isView(false);
